tests/custom/STARIS_2022/operation-type-errors/xor-type-error/stderr.expected
Error:
    Parser error in file: xor-type-error.essence Error is:
ValidatorError xor-type-error.essence:2:19:
  |
2 | such that b = xor(3)
  |                   ^
Type error:
	Expected:"Collection of boolean"
	Got: int

